fixed mobile layout issue with tiles

--- a/blocks/tiles/tiles.css
+++ b/blocks/tiles/tiles.css
@@ -2,13 +2,17 @@
   padding: 0;
 }
 
+.tiles-container h2 {
+  margin-bottom: 0;
+}
+
 .tiles-wrapper {
   clear: both;
   display: block;
   min-height: 400px;
 }
 
-.tiles-main {
+.tiles {
   margin: 0;
   padding: 0;
   clear: both;
@@ -16,6 +20,7 @@
 }
 
 .tile {
+  width: 24%;
   padding: 0 10px;
   margin: 10px 0;
   float: left;
@@ -23,7 +28,6 @@
 }
 
 .tile-container {
-  width: 270px;
   height: 380px;
   transition: all .25s;
   position: relative;
@@ -102,9 +106,10 @@
 }
 
 @media (max-width: 768px) {
-  .tile-container {
+  .tile {
     width: 100%;
     height: 100%;
+    padding: 0;
   }
 }
 
