--- a/styles/styles.css
+++ b/styles/styles.css
@@ -527,6 +527,12 @@ main {
   clear: both;
 }
 
+@media (max-width: 768px) {
+  .section {
+    display: flow-root;
+  }
+}
+
 .aboutme h3,
 .followme h3 {
   font-size: 1rem;
